--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,14 @@
 ** **
 */
 .App {
-  width: 100%;
-  height: 100%;
-  text-align: center;
+   width: 100%;
+   height: 100%;
+   text-align: center;
+}
+
+.App > main {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: calc(100% - 64px);
 }
